--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -2,43 +2,23 @@
 
 $primary: (
   black: #000000,
-  purple: #6b1c96,
   white: #ffffff,
   body: #28251b,
-  orange: #e64328,
-);
-
-$secondary: (
-  fuchsia: #a71181,
 );
 
 $_colors: (
-  dark-gray: (
-    500: #362742,
-  ),
-  light-gray: (
-    500: #c2cacf,
-  ),
-  purple: (
-    500: #4c146b,
-  ),
-  green: (
-    500: #008040,
+  brown: (
+    500: #6e6649,
   ),
   yellow: (
-    500: #916707,
-  ),
-  red: (
-    500: #d52424,
-  ),
-  blue: (
-    500: #1e71d4,
+    700: #ffcd29,
+    600: #ffd55f,
+    500: #ffd765,
+    400: #ffdb77,
+    300: #fffca8,
   ),
   orange: (
-    500: #e64328,
-  ),
-  pink: (
-    500: #f81f9c,
+    500: #c74406,
   ),
 );
 
@@ -50,11 +30,6 @@ $_colors: (
   @each $color, $value in $primary {
     --primary-#{"" + $color}: #{$value};
     --primary-#{"" + $color}-rgb: #{red($value)}, #{green($value)},
-      #{blue($value)};
-  }
-  @each $color, $value in $secondary {
-    --interface-#{"" + $color}: #{$value};
-    --interface-#{"" + $color}-rgb: #{red($value)}, #{green($value)},
       #{blue($value)};
   }
   @each $colorname, $variants in $_colors {
