--- a/src/components/ui/Display/styles.module.scss
+++ b/src/components/ui/Display/styles.module.scss
@@ -77,7 +77,7 @@ $default-sm-sizes: (
 .display {
   color: inherit;
   display: block;
-  font-family: var(--font-body);
+  font-family: var(--font-heading);
   margin-bottom: 0;
   $display: &;
 
