added header and footer

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -3,6 +3,7 @@
 $primary: (
   black: #000000,
   white: #ffffff,
+  offwhite: #fffefa,
   body: #28251b,
 );
 
@@ -10,6 +11,7 @@ $_colors: (
   brown: (
     500: #6e6649,
   ),
+
   yellow: (
     700: #ffcd29,
     600: #ffd55f,
