--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -10,7 +10,7 @@ body:has(.layout) {
 
 .container-wide {
   @include make-container(48px);
-  max-width: 1300px;
+  max-width: 1400px !important;
   padding: 0px 40px;
   @include media-breakpoint-down(xxll) {
     max-width: 1180px;
