--- a/src/components/pages/Home/TrasnformContent/styles.module.scss
+++ b/src/components/pages/Home/TrasnformContent/styles.module.scss
@@ -10,12 +10,19 @@
   align-items: flex-start;
   justify-content: center;
   padding: 56px 0px;
+  @include media-breakpoint-down(md) {
+    gap: var(--spacer-2);
+    padding: 0px;
+  }
   color: var(--primary-body);
   &_title {
     font-size: 56px !important;
     line-height: 52px !important;
     letter-spacing: -1.12px !important;
     max-width: 620px;
+    @include media-breakpoint-down(md) {
+      font-size: 36px !important;
+    }
   }
   &_description {
     font-size: 24px !important;
@@ -23,6 +30,9 @@
     letter-spacing: -0.12px !important;
     max-width: 620px;
     padding-top: 18px;
+    @include media-breakpoint-down(md) {
+      font-size: 16px !important;
+    }
   }
   @include media-breakpoint-down(xl) {
     flex-direction: column;
