--- a/src/components/ui/Button/styles.module.scss
+++ b/src/components/ui/Button/styles.module.scss
@@ -12,6 +12,7 @@
   border-radius: 10px;
   font-size: 20px;
   font-weight: 600;
+  font-family: var(--font-body);
   line-height: 24px;
   &_icon {
     margin-right: 16px;
