--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -4,7 +4,8 @@ $primary: (
   black: #000000,
   white: #ffffff,
   offwhite: #fffefa,
-  body: #28251b,
+  body: rgba(233, 219, 189, 0.9),
+  dark: #02030c,
 );
 
 $_colors: (
@@ -21,6 +22,7 @@ $_colors: (
   ),
   orange: (
     500: #c74406,
+    400: #fc7400,
   ),
 );
 
