design home page components

--- a/src/components/pages/Home-v2/GetStarted/styles.module.scss
+++ b/src/components/pages/Home-v2/GetStarted/styles.module.scss
@@ -10,7 +10,33 @@
     letter-spacing: -0.48px !important;
   }
   &_cards {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 24px;
+    align-items: stretch;
+  }
+
+  &_cards > * {
+    width: 100% !important;
+    max-width: none !important;
+    margin: 0 !important;
+    box-sizing: border-box;
+    height: 100%;
+  }
+
+  @include media-breakpoint-down(xl) {
+    &_cards {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  @include media-breakpoint-down(lg) {
+    &_cards {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  @include media-breakpoint-down(sm) {
+    &_cards {
+      grid-template-columns: 1fr;
+    }
   }
 }
