--- a/src/components/ui/Card-v2/styles.module.scss
+++ b/src/components/ui/Card-v2/styles.module.scss
@@ -2,20 +2,24 @@
 @import "~bootstrap/scss/mixins";
 
 .card {
-  min-width: 286px;
+  min-width: 100%;
   min-height: 197px;
   border-radius: 8px;
-  background-color: var(--interface-yellow-400);
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
   padding-left: 21.72px;
-  color: var(--primary-body);
+  border: none;
+  position: relative;
+  z-index: 0;
+
   &_title {
     font-size: 28px !important;
     line-height: 32px !important;
     letter-spacing: -0.7px !important;
+    color: var(--interface-orange-400);
   }
   &_text {
     line-height: 120% !important;
@@ -25,8 +29,15 @@
     width: 72px;
     height: 72px;
     border-radius: 50%;
-    background-color: var(--interface-yellow-400);
+    background-color: var(--interface-blue-700);
     padding: var(-spacer--2);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-bottom: 24px;
+  }
+  &_background {
+    position: absolute;
+    z-index: -1;
   }
 }
