--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -24,6 +24,10 @@ $_colors: (
     500: #c74406,
     400: #fc7400,
   ),
+  blue: (
+    700: #161230,
+    600: rgba(22, 18, 48, 0.4),
+  ),
 );
 
 :root {
