--- a/src/components/darkHeader/styles.module.scss
+++ b/src/components/darkHeader/styles.module.scss
@@ -3,7 +3,7 @@
 
 .header {
   background: var(--primary-black);
-  padding: var(--spacer-3) var(--spacer-4);
+  padding: var(--spacer-3) 0px;
   color: var(--primary-black);
   @include media-breakpoint-down(xl) {
     padding: var(--spacer-3) var(--spacer-1);
@@ -15,7 +15,6 @@
   justify-content: space-between;
   align-items: center;
   padding: var(--spacer-2) var(--spacer-4);
-  border-radius: 64px;
   background: var(--primary-black);
   border-radius: 64px;
   border: 1px solid #25204e;
@@ -52,7 +51,7 @@
     gap: 8px;
     margin-left: 12px;
   }
-  @include media-breakpoint-down(md) {
+  @media (max-width: 840px) {
     display: none;
   }
 }
@@ -66,6 +65,7 @@
   h6 {
     font-weight: 500;
     color: var(--interface-yellow-200);
+    font-family: var(--font-body);
   }
 }
 
@@ -73,8 +73,12 @@
   display: flex;
   align-items: center;
   gap: 38px;
-  @include media-breakpoint-down(md) {
+
+  @media (max-width: 840px) {
     display: none;
+  }
+  @include media-breakpoint-down(xl) {
+    gap: 16px;
   }
   @include media-breakpoint-down(lg) {
     gap: 10px;
@@ -120,7 +124,7 @@
     display: block;
     height: 3px;
     width: 100%;
-    background-color: var(--primary-black);
+    background-color: var(--interface-orange-600);
     border-radius: 2px;
     transition: all 0.3s ease-in-out;
   }
@@ -134,7 +138,7 @@
     }
   }
 
-  @include media-breakpoint-up(md) {
+  @media (min-width: 840px) {
     display: none;
   }
 }
@@ -146,7 +150,7 @@
   height: 100vh;
   overflow: scroll;
   width: 100%;
-  background: var(--primary-offwhite);
+  background: var(--primary-black);
   z-index: 900;
   display: flex;
   align-items: flex-start;
@@ -174,7 +178,7 @@
   align-items: center;
   gap: 32px;
   padding-bottom: 16px;
-  color: var(--primary-black);
+  color: var(--primary-white);
   cursor: pointer;
 
   &:hover {
@@ -223,5 +227,6 @@
   }
   &:hover {
     background-color: var(--primary-white);
+    opacity: 0.8;
   }
 }
