--- a/src/components/pages/Home/TrasnformContent/styles.module.scss
+++ b/src/components/pages/Home/TrasnformContent/styles.module.scss
@@ -2,7 +2,7 @@
 @import "~bootstrap/scss/mixins";
 .container {
   width: 100% !important;
-  padding-top: 52px;
+  padding-top: 12px;
   padding-bottom: 52px;
   background: linear-gradient(0deg, #ffffff00 89.93%, #ffffff99 100%),
     linear-gradient(180deg, #00000000 0%, #02030c 100%), #0a071f;
@@ -15,11 +15,10 @@
   padding: 76px 0px;
   @include media-breakpoint-down(xl) {
     gap: var(--spacer-4);
-    padding: 0px;
   }
   @include media-breakpoint-down(lg) {
     gap: var(--spacer-2);
-    padding: 0px;
+    padding: 30px 0px;
   }
   color: var(--primary-body);
   &_title {
@@ -30,9 +29,6 @@
     font-weight: 700;
     line-height: 52px;
     letter-spacing: -0.48px;
-    @include media-breakpoint-down(lg) {
-      font-size: 16px !important;
-    }
   }
   &_description {
     padding-top: 18px;
@@ -46,20 +42,13 @@
       font-size: 16px !important;
     }
   }
-  @include media-breakpoint-down(xl) {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+
   &_button_group {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: var(--spacer-4);
     margin-top: var(--spacer-5);
-    @include media-breakpoint-down(sm) {
-      flex-direction: column;
-    }
   }
   &_button {
     background-color: transparent !important;
