--- a/src/components/social/styles.module.scss
+++ b/src/components/social/styles.module.scss
@@ -1,10 +1,20 @@
 @import "~bootstrap/scss/mixins";
 @import "/src/styles/variables";
 
-.social {
+.social_container {
   display: flex;
   align-items: center;
   gap: 16px;
+
+  @include media-breakpoint-down(lg) {
+    gap: 8px;
+  }
+}
+
+.social {
+  display: flex;
+  align-items: center;
+  gap: 6px;
   h6 {
     font-weight: 500;
     color: var(--primary-black);
@@ -17,7 +27,7 @@
 .dark_social {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 6px;
   h6 {
     font-weight: 500;
     color: var(--interface-yellow-200);
