--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -10,18 +10,12 @@ body:has(.layout) {
 
 .container-wide {
   @include make-container(48px);
-  @include media-breakpoint-up(xxl) {
+  @include media-breakpoint-up(xl) {
     max-width: 1400px !important;
-    padding: 0px 40px;
-    @include media-breakpoint-down(xxll) {
-      max-width: 1180px;
-    }
-    @include media-breakpoint-down(xl) {
-      max-width: 100%;
-    }
-    @include media-breakpoint-down(mlg) {
-      max-width: 100%;
-      padding: 0px 32px;
-    }
+    padding: 0px 60px !important;
+  }
+  @include media-breakpoint-down(xl) {
+    max-width: 100%;
+    padding: 0px 40px !important;
   }
 }
