--- a/src/components/social/styles.module.scss
+++ b/src/components/social/styles.module.scss
@@ -17,6 +17,7 @@
   gap: 6px;
   h6 {
     font-weight: 500;
+    font-family: var(--font-body);
     color: var(--primary-black);
   }
   @include media-breakpoint-down(lg) {
@@ -31,6 +32,7 @@
   h6 {
     font-weight: 500;
     color: var(--interface-yellow-200);
+    font-family: var(--font-body);
   }
   @include media-breakpoint-down(lg) {
     gap: 8px;
