--- a/src/components/pages/Home/TrasnformContent/styles.module.scss
+++ b/src/components/pages/Home/TrasnformContent/styles.module.scss
@@ -54,8 +54,7 @@
     background-color: transparent !important;
     color: var(--interface-yellow-200) !important;
     &:hover {
-      background-color: var(--interface-orange-600) !important;
-      border-radius: 100px !important;
+      opacity: 0.8;
     }
   }
 }
