--- a/src/components/pages/Home/TrasnformContent/styles.module.scss
+++ b/src/components/pages/Home/TrasnformContent/styles.module.scss
@@ -24,7 +24,7 @@
   &_title {
     max-width: 620px;
     color: var(--interface-yellow-800);
-    font-size: 24px;
+    font-size: 24px !important;
     font-style: normal;
     font-weight: 700;
     line-height: 52px;
@@ -49,12 +49,14 @@
     align-items: center;
     gap: var(--spacer-1);
     margin-top: var(--spacer-5);
+    @include media-breakpoint-down(lg) {
+      margin-bottom: var(--spacer-2);
+    }
     @media (max-width: 500px) {
       flex-direction: column;
       align-items: center;
       justify-content: center;
       gap: var(--spacer-3);
-      margin-bottom: var(--spacer-2);
     }
   }
   &_button {
