--- a/src/components/pages/Home-v2/LiveAssistant/styles.module.scss
+++ b/src/components/pages/Home-v2/LiveAssistant/styles.module.scss
@@ -2,8 +2,8 @@
 @import "~bootstrap/scss/mixins";
 
 .live {
-  margin-top: var(--spacer-2);
-  margin-bottom: 178px;
+  padding-top: var(--spacer-3);
+  margin-bottom: var(--spacer-7);
   display: flex;
   justify-content: space-between;
   flex-direction: row;
@@ -12,6 +12,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: var(--spacer-3);
   }
 
   &_title {
@@ -24,6 +25,10 @@
     letter-spacing: -0.2px !important;
     font-size: 40px !important;
     max-width: 606px;
+    @include media-breakpoint-down(md) {
+      font-size: 16px !important;
+      line-height: 20px !important;
+    }
   }
   &_chat_with {
     font-weight: 300;
@@ -31,5 +36,13 @@
   &_chat_now {
     font-weight: 600;
     color: var(--interface-orange-600);
+  }
+  &_image {
+    img {
+      @include media-breakpoint-down(sm) {
+        width: 100% !important ;
+        height: 100% !important;
+      }
+    }
   }
 }
