--- a/src/components/pages/Home-v2/Features/styles.module.scss
+++ b/src/components/pages/Home-v2/Features/styles.module.scss
@@ -4,8 +4,8 @@
 .features {
   margin-bottom: var(--spacer-5);
   &_title {
-    padding-top: var(--spacer-1);
-    padding-bottom: var(--spacer-1);
+    padding-top: var(--spacer-3);
+    padding-bottom: var(--spacer-3);
     line-height: 52px !important;
     letter-spacing: -0.48px !important;
   }
@@ -29,12 +29,14 @@
     font-weight: 400 !important;
     line-height: 120% !important;
     letter-spacing: -0.17px !important;
+    padding-bottom: 11px;
   }
   &_card_text {
     font-size: 18px !important;
     font-weight: 400 !important;
     line-height: 120% !important;
     letter-spacing: -0.09px !important;
+    max-width: 173px;
   }
   @include media-breakpoint-down(xxl) {
     &_cards {
