--- a/src/components/pages/Home-v2/TrasnformContent/styles.module.scss
+++ b/src/components/pages/Home-v2/TrasnformContent/styles.module.scss
@@ -96,11 +96,13 @@
 
   &_card {
     background: none;
-    padding-left: var(--spacer-0);
+    padding-left: var(--spacer-2);
+    padding-right: var(--spacer-2);
     width: 100%;
     min-width: 0;
     min-height: 258px;
     box-sizing: border-box;
+    border: none !important;
   }
   &_card_title {
     font-size: 30px !important;
