--- a/src/components/ui/Card-v2/styles.module.scss
+++ b/src/components/ui/Card-v2/styles.module.scss
@@ -12,9 +12,9 @@
   flex-direction: column;
   padding-left: 21.72px;
   padding-right: 8px;
-  border: none;
   position: relative;
   z-index: 0;
+  border: 1px solid var(--primary-border);
 
   &_title {
     font-size: 28px !important;
@@ -26,6 +26,7 @@
   &_text {
     line-height: 120% !important;
     letter-spacing: -0.09px !important;
+    color: var(--primary-body) !important;
   }
   &_icon_wrapper {
     width: 72px;
@@ -37,9 +38,13 @@
     justify-content: center;
     align-items: center;
     margin-bottom: var(--spacer-3);
+    border: 1px solid var(--primary-border);
   }
   &_background {
     position: absolute;
     z-index: -1;
+  }
+  &_link {
+    cursor: pointer !important;
   }
 }
