--- a/src/components/social/styles.module.scss
+++ b/src/components/social/styles.module.scss
@@ -38,3 +38,9 @@
     gap: 8px;
   }
 }
+.count {
+  font-size: 15px !important;
+  font-weight: 400 !important;
+  line-height: 24px !important;
+  color: var(--primary-body) !important;
+}
