--- a/src/components/pages/Home-v2/LiveAssistant/styles.module.scss
+++ b/src/components/pages/Home-v2/LiveAssistant/styles.module.scss
@@ -19,6 +19,7 @@
     line-height: 52px !important;
     letter-spacing: -0.48px !important;
     margin-bottom: var(--spacer-1);
+    font-size: 24px !important;
   }
   &_detail {
     line-height: 52px !important;
