--- a/src/components/darkFooter/styles.module.scss
+++ b/src/components/darkFooter/styles.module.scss
@@ -122,8 +122,12 @@
 }
 .footer_links {
   display: flex;
-  gap: 24px;
+  gap: var(--spacer-3);
   justify-content: flex-start;
+  @include media-breakpoint-down(lg) {
+    flex-direction: column;
+    gap: var(--spacer-1);
+  }
 }
 .icon {
   display: flex;
