--- a/src/components/pages/Home-v2/TrasnformContent/styles.module.scss
+++ b/src/components/pages/Home-v2/TrasnformContent/styles.module.scss
@@ -40,6 +40,7 @@
     letter-spacing: -0.2px;
     @include media-breakpoint-down(md) {
       font-size: 16px !important;
+      margin-bottom: var(--spacer-2);
     }
   }
 
