--- a/src/components/pages/Home-v2/LiveAssistant/styles.module.scss
+++ b/src/components/pages/Home-v2/LiveAssistant/styles.module.scss
@@ -38,6 +38,10 @@
     font-weight: 600;
     color: var(--interface-orange-600) !important;
     text-decoration: none !important;
+
+    &:hover {
+      text-decoration: underline !important;
+    }
   }
   &_image {
     img {
