--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -15,17 +15,18 @@ $_colors: (
   ),
 
   yellow: (
-    200: #e9dbbde5,
+    800: #e9dbbde6,
     700: #ffcd29,
     600: #ffd55f,
     500: #ffd765,
     400: #ffdb77,
     300: #fffca8,
-    800: #e9dbbde6,
+    200: #e9dbbde5,
+    100: #d2c6ac,
   ),
   orange: (
-    500: #c74406,
     600: #fc7400,
+    500: #c74406,
   ),
   blue: (
     800: #0a071f,
