--- a/src/components/ui/Card-v2/styles.module.scss
+++ b/src/components/ui/Card-v2/styles.module.scss
@@ -11,10 +11,9 @@
   align-items: flex-start;
   flex-direction: column;
   padding-left: 21.72px;
-  padding-right: 8px;
   position: relative;
   z-index: 0;
-  border: 1px solid var(--primary-border);
+  border: 1px solid var(--interface-yellow-100);
 
   &_title {
     font-size: 28px !important;
@@ -37,7 +36,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: var(--spacer-3);
+    margin-bottom: var(--spacer-4);
     border: 1px solid var(--primary-border);
   }
   &_background {
