--- a/src/components/pages/Home-v2/TrasnformContent/styles.module.scss
+++ b/src/components/pages/Home-v2/TrasnformContent/styles.module.scss
@@ -55,14 +55,32 @@
     }
     @media (max-width: 500px) {
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
+      align-items: flex-start;
+      justify-content: flex-start;
       gap: var(--spacer-3);
     }
   }
   &_button {
     background-color: transparent !important;
     color: var(--interface-yellow-200) !important;
+    &:hover {
+      color: var(--interface-yellow-900) !important;
+      opacity: 1 !important;
+    }
+  }
+  &_git_button {
+    @media (max-width: 500px) {
+      padding-left: var(--spacer-0) !important;
+    }
+    &:hover {
+      color: var(--interface-yellow-900) !important;
+      opacity: 1 !important;
+    }
+
+    &:active {
+      color: var(--interface-orange-600) !important;
+      opacity: 1 !important;
+    }
   }
 }
 
@@ -83,7 +101,12 @@
     margin-right: 16px;
   }
   &:hover {
-    background-color: var(--primary-white);
+    background-color: var(--interface-yellow-900) !important;
+    opacity: 1 !important;
+  }
+  &:active {
+    background-color: var(--interface-orange-600) !important;
+    opacity: 1 !important;
   }
 }
 .transform {
