--- a/src/components/ui/Card-v2/styles.module.scss
+++ b/src/components/ui/Card-v2/styles.module.scss
@@ -13,7 +13,7 @@
   padding-left: 21.72px;
   position: relative;
   z-index: 0;
-  border: 1px solid var(--interface-yellow-100);
+  border: 1px solid var(--primary-border);
 
   &_title {
     font-size: 28px !important;
