--- a/src/components/darkHeader/styles.module.scss
+++ b/src/components/darkHeader/styles.module.scss
@@ -16,6 +16,9 @@
   border-radius: 64px;
   border: 1px solid #25204e;
   box-shadow: 0 2px 14px 0 rgba(13, 0, 255, 0.1);
+  @media (max-width: 840px) {
+    border: none !important;
+  }
 }
 
 .left {
@@ -23,6 +26,11 @@
   align-items: center;
   &_img {
     object-fit: contain;
+  }
+  &_text {
+    font-size: 24px !important;
+    font-weight: 500 !important;
+    line-height: 20px !important;
   }
 }
 
@@ -126,15 +134,6 @@
     transition: all 0.3s ease-in-out;
   }
 
-  &.active {
-    span:nth-child(1) {
-      transform: rotate(45deg) translate(5px, 5px);
-    }
-    span:nth-child(2) {
-      transform: rotate(-45deg) translate(5px, -5px);
-    }
-  }
-
   @media (min-width: 840px) {
     display: none;
   }
@@ -149,19 +148,32 @@
   width: 100%;
   background: var(--primary-black);
   z-index: 900;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
   padding-top: 40px;
   transition: all 0.4s ease-in-out;
 }
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
 
+.drawerHeader {
+  margin-bottom: var(--spacer-5);
+  padding-left: 23px;
+  padding-right: 23px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
 .drawerContent {
   display: flex;
   flex-direction: column;
   width: 90%;
   max-width: 600px;
-  gap: 20px;
+  gap: var(--spacer-3);
+  padding-left: 23px;
 }
 
 .drawerSectionTitle {
@@ -189,7 +201,7 @@
     line-height: 20px !important;
     color: var(--primary-body) !important;
     &:hover {
-      color: var(--interface-yellow-900) !important;
+      color: var(--interface-orange-600) !important;
       opacity: 1 !important;
     }
     &:active {
@@ -242,4 +254,23 @@
     background-color: var(--interface-yellow-900) !important;
     opacity: 1 !important;
   }
+}
+.mob {
+  padding-left: 23px;
+  padding-right: 23px;
+  width: 100%;
+}
+.mob_button {
+  width: 100%;
+  padding: var(--spacer-3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav_flex {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80vh;
 }
