--- a/src/components/pages/Home-v2/TrasnformContent/styles.module.scss
+++ b/src/components/pages/Home-v2/TrasnformContent/styles.module.scss
@@ -23,6 +23,9 @@
     padding: 30px 0px;
     padding: var(--spacer-0);
   }
+  @include media-breakpoint-down(sm) {
+    gap: var(--spacer-0);
+  }
   color: var(--primary-body);
   &_title {
     max-width: 620px;
@@ -61,7 +64,7 @@
       align-items: flex-start;
       justify-content: flex-start;
       gap: var(--spacer-3);
-      margin-bottom: var(--spacer-4);
+      margin-bottom: var(--spacer-5);
     }
   }
   &_button {
