--- a/src/components/pages/Home-v2/LiveAssistant/styles.module.scss
+++ b/src/components/pages/Home-v2/LiveAssistant/styles.module.scss
@@ -27,8 +27,10 @@
     font-size: 40px !important;
     max-width: 606px;
     @include media-breakpoint-down(md) {
-      font-size: 16px !important;
-      line-height: 20px !important;
+      font-size: 32px !important;
+      font-weight: 400 !important;
+      line-height: 122% !important;
+      letter-spacing: -0.16px !important;
     }
   }
   &_chat_with {
