--- a/src/components/ui/Card-v2/styles.module.scss
+++ b/src/components/ui/Card-v2/styles.module.scss
@@ -26,6 +26,9 @@
     line-height: 120% !important;
     letter-spacing: -0.09px !important;
     color: var(--primary-body) !important;
+    @include media-breakpoint-down(md) {
+      font-size: 24px !important;
+    }
   }
   &_icon_wrapper {
     width: 72px;
