updated carusal and colors

--- a/src/components/ui/Card-v2/styles.module.scss
+++ b/src/components/ui/Card-v2/styles.module.scss
@@ -19,7 +19,7 @@
     font-size: 28px !important;
     line-height: 32px !important;
     letter-spacing: -0.7px !important;
-    color: var(--interface-orange-600);
+    color: var(--primary-body);
     padding-bottom: 5px;
   }
   &_text {
