--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -26,7 +26,7 @@ $_colors: (
     100: #d2c6ac,
   ),
   orange: (
-    600: #fc7400,
+    600: #e58c07,
     500: #c74406,
   ),
   blue: (
@@ -35,7 +35,6 @@ $_colors: (
     600: rgba(22, 18, 48, 0.4),
   ),
 );
-
 :root {
   // Creating the box shadows variants to be used eery
   --box-shadow-100: 0px 4px 10px 0px rgba(0, 0, 0, 0.1);
