--- a/src/components/darkFooter/styles.module.scss
+++ b/src/components/darkFooter/styles.module.scss
@@ -47,7 +47,7 @@
   gap: var(--spacer-1);
   h5 {
     font-weight: 600;
-    color: var(--interface-orange-600);
+    color: var(--primary-body);
   }
   @include media-breakpoint-up(lg) {
     gap: 5px;
