--- a/src/components/pages/Home-v2/GetStarted/styles.module.scss
+++ b/src/components/pages/Home-v2/GetStarted/styles.module.scss
@@ -9,6 +9,7 @@
     line-height: 52px !important;
     letter-spacing: -0.48px !important;
     font-size: 24px !important;
+    color: var(--primary-body) !important;
   }
   &_cards {
     display: grid;
