--- a/src/components/pages/LandingPage/Hero/styles.module.scss
+++ b/src/components/pages/LandingPage/Hero/styles.module.scss
@@ -78,12 +78,9 @@
       max-width: 100%;
     }
   }
-  &_formWrapper {
-    border-radius: 8px;
-    border: 1px solid var(--primary-border);
-    background: var(--interface-blue-600);
-    width: 580px;
-    height: 448px;
-    padding: var(--spacer-4);
+  &_form {
+    display: flex !important;
+    flex-direction: column !important;
+    gap: 32px;
   }
 }
