--- a/src/components/pages/Home-v2/Features/styles.module.scss
+++ b/src/components/pages/Home-v2/Features/styles.module.scss
@@ -140,7 +140,7 @@
     width: 10px;
     height: 10px;
     border-radius: 100%;
-    background-color: var(--primary-body);
+    background-color: var(--interface-blue-800);
     border: none;
     cursor: pointer;
     transition: all 0.3s ease;
