--- a/src/components/pages/LandingPage/Introduction/styles.module.scss
+++ b/src/components/pages/LandingPage/Introduction/styles.module.scss
@@ -3,7 +3,7 @@
 .container {
   width: 100% !important;
   padding-top: 12px;
-  padding-bottom: 52px;
+  padding-bottom: 96px;
   background: linear-gradient(0deg, #ffffff00 89.93%, #ffffff99 100%),
     linear-gradient(180deg, #00000000 0%, #02030c 100%), #0a071f;
   background-blend-mode: overlay, normal, normal;
@@ -13,7 +13,8 @@
 }
 .section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   padding: 76px 0px;
   @include media-breakpoint-down(xl) {
     gap: var(--spacer-4);
@@ -28,22 +29,21 @@
   }
   color: var(--primary-body);
   &_title {
-    max-width: 620px;
     color: var(--interface-yellow-800);
     font-size: 24px !important;
     font-style: normal;
-    font-weight: 700;
-    line-height: 52px;
-    letter-spacing: -0.48px;
+    font-weight: 500;
+    line-height: 130%; /* 31.2px */
+    letter-spacing: -0.12px;
+    color: var(--interface-orange-600);
   }
   &_description {
-    padding-top: 18px;
     color: var(--interface-yellow-800);
-    font-size: 40px !important;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 130%;
-    letter-spacing: -0.2px;
+    max-width: 640px;
+    font-size: 32px !important;
+    font-weight: 500 !important;
+    line-height: 130% !important; /* 41.6px */
+    letter-spacing: -0.16px !important;
     @include media-breakpoint-down(md) {
       font-size: 24px !important;
       margin-bottom: var(--spacer-4);
@@ -87,75 +87,6 @@
     &:active {
       color: var(--interface-orange-600) !important;
       opacity: 1 !important;
-    }
-  }
-}
-
-.dark_button {
-  display: flex;
-  padding: 14px 30px !important;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--interface-orange-600) !important;
-  color: var(--primary-black) !important;
-  border: none;
-  border-radius: 100px !important;
-  font-size: 20px !important;
-  font-weight: 500;
-  font-family: var(--font-body);
-  line-height: 24px;
-  &_icon {
-    margin-right: 16px;
-  }
-  &:hover {
-    background-color: var(--interface-yellow-900) !important;
-    opacity: 1 !important;
-  }
-  &:active {
-    background-color: var(--interface-orange-600) !important;
-    opacity: 1 !important;
-  }
-}
-.transform {
-  &_cards {
-    display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    column-gap: var(--spacer-3);
-    row-gap: 40px;
-    align-items: stretch;
-  }
-
-  &_card {
-    background: none;
-    width: 100%;
-    padding: 0px;
-    min-width: 0;
-    min-height: 258px;
-    box-sizing: border-box;
-    border: none !important;
-    padding-left: 0px !important;
-  }
-  &_card_title {
-    font-size: 30px !important;
-    line-height: 32px !important;
-    letter-spacing: -0.75px !important;
-    color: var(--primary-body) !important;
-    padding-bottom: 10px;
-  }
-  &_card_text {
-    font-size: 20px !important;
-    font-weight: 400 !important;
-    line-height: 24px !important;
-    letter-spacing: -0.1px !important;
-  }
-  @include media-breakpoint-down(xl) {
-    &_cards {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-  @include media-breakpoint-down(sm) {
-    &_cards {
-      grid-template-columns: 1fr;
     }
   }
 }
