--- a/src/components/pages/LandingPage/SuccessReason/styles.module.scss
+++ b/src/components/pages/LandingPage/SuccessReason/styles.module.scss
@@ -6,6 +6,7 @@
     font-weight: 500 !important;
     line-height: 100% !important; /* 48px */
     letter-spacing: -0.24px !important;
+    font-size: 46px !important;
   }
   &_detail {
     padding-top: var(--spacer-4);
