--- a/src/components/pages/LandingPage/Introduction/styles.module.scss
+++ b/src/components/pages/LandingPage/Introduction/styles.module.scss
@@ -3,7 +3,6 @@
 .container {
   width: 100% !important;
   padding-top: 12px;
-  padding-bottom: 96px;
   background: linear-gradient(0deg, #ffffff00 89.93%, #ffffff99 100%),
     linear-gradient(180deg, #00000000 0%, #02030c 100%), #0a071f;
   background-blend-mode: overlay, normal, normal;
@@ -31,10 +30,9 @@
   &_title {
     color: var(--interface-yellow-800);
     font-size: 24px !important;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 130%; /* 31.2px */
-    letter-spacing: -0.12px;
+    font-weight: 500 !important;
+    line-height: 130% !important; /* 31.2px */
+    letter-spacing: -0.12px !important;
     color: var(--interface-orange-600);
   }
   &_description {
